Completed nav resolving buggy behaviour in react-bootstrap with move to vanilla bootstrap 4. Need to check responsive behaviour and address menu collapse functionality

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,9 @@
-.App {
-  text-align: center;
-}
-
 .App-body {
-  min-height: 90vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-navbar {
-  background-color: #353b48;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
@@ -39,13 +25,11 @@
 
 .App-footer {
   background-color: #2f3640;
-  min-height: 5vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
-  font-size: calc(10px + 1vmin);
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 0.5vmin);
   color: white;
-}
-
-.App-link {
-  color: #7f8fa6;
 }
